# physics-engine

./: .gitignore  CMakeLists.txt  PhysicsEngine  README.md  draw_circle.c  draw_circle.h  example.c  main.c  main.h  server.c
engine/: CMakeLists.txt
engine/math/: vector2d.c  vector2d.h
engine/physics/: physics_circle_object.c  physics_circle_object.h  physics_object.c  physics_object.h  physics_shape_object.c  physics_shape_object.h  physics_square_object.c  physics_square_object.h
examples/: bouncing_square.c  bouncing_square_with_gravity.c  bouncing_square_with_gravity_and_wind.c  bouncing_square_with_gravity_wind_and_friction.c  square_fluid_resistance.c  squares_fluid_resistance.c
vector2d/: CMakeLists.txt  vector2d.c  vector2d.h
web/: bun.lockb  package.json
web/app/routes/: _index.tsx
